hack to fix line break in the root date hpd readout

--- a/src/style/runner.less
+++ b/src/style/runner.less
@@ -538,7 +538,7 @@
 
       th {
         display: inline-block;
-        width: 74px;
+        width: 62px;
         font-size: var(--chart-xaxis-hover-text-font-size);
         // color: var(--chart-axis-text);
         color: #5e5e5e;
